--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'products/css/style.css' %}">
     <title>PRODUCT HUNT</title>
   </head>
@@ -17,26 +17,36 @@
     <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-md navbar-light bg-light py-3">
       <div class="container">
-        <a class="navbar-brand" href="#">Product Hunt</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Product Hunt</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+              {% if user.is_authenticated %}
+              <div class="d-inline m-auto">
+               Welcome, {{user.username}}
+              </div>
+              {%endif%}
           <ul class="navbar-nav ml-auto">
 
 
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+              <a class="nav-link btn btn-outline-secondary mr-3" href="{% url 'products:create' %}">
+                <i class="fas fa-plus"></i> Create New</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link btn btn-outline-secondary mr-3" href="{% url 'accounts:logout' %}">Logout</a>
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:signup' %}">SignUp</a>
+              <a class="nav-link btn btn-outline-secondary mr-3" href="{% url 'accounts:signup' %}">SignUp</a>
             </li>
-            
+
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+              <a class="nav-link btn btn-outline-secondary mr-3" href="{% url 'accounts:login' %}">Login</a>
             </li>
             {% endif %}
           </ul>
@@ -45,16 +55,19 @@
     </nav>
 
 
-
+  <div class="main">
     {% block content %}
+
+
+
     {% endblock %}
 
+  </div>
 
 
-<!--
-    <footer>
-      {% now 'Y' %}
-    </footer> -->
+    <footer class="bg-light text-center py-3 fixed-bottom">
+      Copyright &copy; {% now 'Y' %}
+    </footer>
 
 
     <!-- Optional JavaScript -->
